syntax = "proto3";

// python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. chat_service.proto

package chat;

service ChatService {
  rpc RequestHeartbeat (Empty) returns (HeartbeatResponse) {}
//   rpc ReceiveMessage (User) returns (stream ChatMessage) {}
//   rpc GetUsers (Empty) returns (stream User) {}
}

message Empty {}

message HeartbeatResponse {
  int64 port = 1;
  bool primary = 2;
}


